# extensions-source

./: .gitignore  Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
.github/scripts/: commit-repo.sh  create-repo.py  generate-build-matrices.py  merge-repo.py  move-built-wasm.py
.github/workflows/: build_pull_request.yml  build_push.yml
core/: Cargo.toml
core/src/: lib.rs
core/wit/: extension.wit
lib/: Cargo.toml
lib-multisrc/mmrcms/: Cargo.toml
lib-multisrc/mmrcms/src/: lib.rs
lib/src/: crypto.rs  deobfuscator.rs  error.rs  html_parser.rs  lib.rs
src/es/mangasin/: Cargo.toml  extension.json
src/es/mangasin/src/: lib.rs
