[package]
name = "gekkoya-lib"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
gekkoya-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
aes = { workspace = true }
cbc = { workspace = true }
cipher = { workspace = true }
md-5 = { workspace = true }
thiserror = { workspace = true }
synchrony-rs = { workspace = true, optional = true }

[features]
default = []
deobfuscator = ["synchrony-rs"]
